# IMAPMessageFilter

./: .gitignore  README.md  config.example.yaml  extract_thunderbird_config.py  extract_thunderbird_filters.py  install.sh  main.py  pyproject.toml
imapmessagefilter/: __init__.py  cli.py  config.py  filter_engine.py  imap_client.py
tests/: __init__.py  test_config.py  test_filter_engine.py
